--- a/examples/multi_process/Makefile
+++ b/examples/multi_process/Makefile
@@ -14,5 +14,6 @@ DIRS-$(CONFIG_RTE_EXEC_ENV_LINUXAPP) += client_server_mp
 DIRS-$(CONFIG_RTE_EXEC_ENV_LINUXAPP) += simple_mp
 DIRS-$(CONFIG_RTE_EXEC_ENV_LINUXAPP) += symmetric_mp
 DIRS-$(CONFIG_RTE_EXEC_ENV_LINUXAPP) += hotplug_mp
+DIRS-$(CONFIG_RTE_EXEC_ENV_LINUXAPP) += symmetric_mp_qdma
 
 include $(RTE_SDK)/mk/rte.extsubdir.mk
