PVT: nxp: update the dpdk and linux conf files for direct assignment
Signed-off-by: Nipun Gupta <nipun.gupta@nxp.com>
DPDK-1531

--- a/nxp/dpaa2/vm_dpdk.conf
+++ b/nxp/dpaa2/vm_dpdk.conf
@@ -18,6 +18,7 @@
 #specify the parent DPRC of the VM Guest kernel (to be passed to QEMU)
 export PARENT_DPRC=dprc.2
 
+unset DPNI_OPTIONS
 export DPIO_COUNT=4
 export DPCON_COUNT=3
 export DPBP_COUNT=14
