--- a/nxp/dpaa2/vm_linux.conf
+++ b/nxp/dpaa2/vm_linux.conf
@@ -22,6 +22,7 @@ export PARENT_DPRC=dprc.1
 export NO_BIND_DPRC=1
 
 #configure for 2 core guest & few addtional objects
+export DPNI_OPTIONS=DPNI_OPT_NO_FS
 export DPIO_COUNT=2
 export DPCON_COUNT=3
 export DPBP_COUNT=1
