PVT:net/dpaa: add support for fmlib in dpdk
This library is required for configuring FMAN for
various flow configurations.

Signed-off-by: Alok Makhariya <alok.makhariya@nxp.com>
Signed-off-by: Hemant Agrawal <hemant.agrawal@nxp.com>

--- a/drivers/net/dpaa/meson.build
+++ b/drivers/net/dpaa/meson.build
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2018 NXP
+# Copyright 2018-2019 NXP
 
 if host_machine.system() != 'linux'
 	build = false
@@ -7,6 +7,7 @@ endif
 deps += ['mempool_dpaa']
 
 sources = files('dpaa_ethdev.c',
+		'fmlib/fm_lib.c',
 		'dpaa_rxtx.c')
 
 allow_experimental_apis = true
