--- a/drivers/net/meson.build
+++ b/drivers/net/meson.build
@@ -27,7 +27,7 @@ drivers = ['af_packet',
 	'mvpp2',
 	'netvsc',
 	'nfp',
-	'null', 'octeontx', 'pcap', 'qede', 'ring',
+	'null', 'octeontx', 'pcap', 'ppfe', 'qede', 'ring',
 	'sfc',
 	'softnic',
 	'szedata2',
