--- a/nxp/dpaa2/vm_dpdk.conf
+++ b/nxp/dpaa2/vm_dpdk.conf
@@ -19,7 +19,7 @@
 export PARENT_DPRC=dprc.2
 
 unset DPNI_OPTIONS
-export DPIO_COUNT=18
+unset DPIO_COUNT
 export DPCON_COUNT=3
 export DPBP_COUNT=14
 export DPMCP_COUNT=3
