PVT: test: restructure PDCP test cases into new file
Signed-off-by: Hemant Agrawal <hemant.agrawal@nxp.com>

--- a/test/test/meson.build
+++ b/test/test/meson.build
@@ -22,6 +22,7 @@ test_sources = files('commands.c',
 	'test_cpuflags.c',
 	'test_crc.c',
 	'test_cryptodev.c',
+	'test_cryptodev_security_pdcp.c',
 	'test_cryptodev_asym.c',
 	'test_cryptodev_blockcipher.c',
 	'test_cycles.c',
