dpaa2: Add ptp driver
To enable set
CONFIG_RTE_LIBRTE_IEEE1588=y in
config/defconfig_arm64-dpaa2-linuxapp-gc

Signed-off-by: Priyanka Jain <priyanka.jain@nxp.com>

--- a/drivers/net/dpaa2/meson.build
+++ b/drivers/net/dpaa2/meson.build
@@ -19,6 +19,7 @@ sources = files('base/dpaa2_hw_dpni.c',
 		'mc/dpni.c')
 
 if dpdk_conf.has('RTE_LIBRTE_IEEE1588')
+	sources += files(dpaa2_ptp.c)
 	sources += files(mc/dprtc.c)
 endif
 
