--- a/drivers/crypto/dpaa2_sec/meson.build
+++ b/drivers/crypto/dpaa2_sec/meson.build
@@ -13,4 +13,4 @@ sources = files('dpaa2_sec_dpseci.c',
 
 allow_experimental_apis = true
 
-includes += include_directories('mc', 'hw')
+includes += include_directories('mc', '../../common/dpaax/caamflib')
