PVT: dpaa2 - fix meson build
Signed-off-by: Hemant Agrawal <hemant.agrawal@nxp.com>

--- a/drivers/net/dpaa2/meson.build
+++ b/drivers/net/dpaa2/meson.build
@@ -19,8 +19,8 @@ sources = files('base/dpaa2_hw_dpni.c',
 		'mc/dpni.c')
 
 if dpdk_conf.has('RTE_LIBRTE_IEEE1588')
-	sources += files(dpaa2_ptp.c)
-	sources += files(mc/dprtc.c)
+	sources += files('dpaa2_ptp.c')
+	sources += files('mc/dprtc.c')
 endif
 
 includes += include_directories('base', 'mc')
