PVT: enetc meson build fix
Signed-off-by: Hemant Agrawal <hemant.agrawal@nxp.com>

--- a/drivers/net/enetc/meson.build
+++ b/drivers/net/enetc/meson.build
@@ -4,7 +4,7 @@
 if host_machine.system() != 'linux'
 	build = false
 endif
-
+deps += ['common_dpaax']
 sources = files('enetc_ethdev.c',
 		'enetc_rxtx.c')
 
