dpaax: move dpaax library to common
Signed-off-by: Gagandeep Singh <g.singh@nxp.com>
Signed-off-by: Hemant Agrawal <hemant.agrawal@nxp.com>

--- a/drivers/net/enetc/Makefile
+++ b/drivers/net/enetc/Makefile
@@ -8,6 +8,7 @@ include $(RTE_SDK)/mk/rte.vars.mk
 #
 LIB = librte_pmd_enetc.a
 
+CFLAGS += -I$(RTE_SDK)/drivers/common/dpaax
 CFLAGS += -O3
 CFLAGS += $(WERROR_FLAGS)
 EXPORT_MAP := rte_pmd_enetc_version.map
