PVT: examples: add compilation of nxp applications
Signed-off-by: Nipun Gupta <nipun.gupta@nxp.com>

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -84,4 +84,9 @@ endif
 
 DIRS-y += eventdev_pipeline
 
+DIRS-y += cmdif
+DIRS-y += l2fwd-event
+DIRS-y += l2fwd-qdma
+DIRS-y += qdma_demo
+
 include $(RTE_SDK)/mk/rte.extsubdir.mk
